Tue Sep 24 06:17:37 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkeventbox.c (gtk_event_box_paint): Honor
	GTK_WIDGET_APP_PAINTABLE() (#92305, Jonathan Blandford.)

Tue Sep 24 05:26:31 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.h gdk/gdkdisplay.c gdk/linux-fb/gdkevents-fb.c 
	gdk/x11/gdkevents-x11.c  gdk/win32/gdkevents-win32.c:
	Change the window parameter for 
	gdk_event_send_client_message[_for_display] from guint32
	to GdkNativeWindow. (#79979)

Tue Sep 24 05:16:25 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk+.spec.in: Fix up a bit to look for the loaders
	in the right place. (#93011, Dennis Dementiev)

Tue Sep 24 05:12:14 2002  Owen Taylor  <otaylor@redhat.com>

        * gtk/gtkimcontextsimple.c: Fixes to GtkIMContextSimple
        compose table for us-intl keyboards (Red Hat bugzilla
        #70995, Alexandre Oliva)

Tue Sep 24 04:50:28 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkspinbutton.c (gtk_spin_button_activate):   
	Chain up so that entry->activates_default is honored.
	(#93865, Pieter Penninckx)

2002-09-23  Jacob Berkman  <jacob@ximian.com>

	* gtk/gtkprogress.c (DEFAULT_FORMAT): cpp macros aren't ``;''
	terminated

Mon Sep 23 19:49:11 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkselection.[ch] gtk/gtkwidget.c gtk/gtkmain.c:
	Privatize gtk_selection_request, gtk_selection_incr_event
	gtk_selection_notify, gtk_selection_property_notify.
	Add doc note about future deprecation of gtk_selection_clear()
	which. (#85683)

	* gtk/gtkoldeditable.c (gtk_old_editable_selection_clear):
	Chain up, rather than calling gtk_selection_clear().

Mon Sep 23 18:53:35 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkprogressbar.c (gtk_progress_bar_set_text): 
	Restore back to the default format instead of an
	empty format. (#82626, Tim Janik)

	* gtk/gtkprogress.c (gtk_progress_set_format_string): 
	Make NULL restore back to the default format.

Mon Sep 23 18:45:46 2002  Owen Taylor  <otaylor@redhat.com>
